--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,17 +1,26 @@
-name: Playwright test
-on: [push,pull_request]
+name: Playwright Tests
+on: [push, pull_request]
 
 jobs:
-  test: 
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
-        run: npm install
-      - name: Install Playwright browsers
-        run: npx playwright install
-      - name: run playwright tests
+        run: npm ci
+      - name: Install Playwright and browser
+        run: |
+          npx playwright install chromium
+          npx playwright install-deps chromium
+      - name: Run Playwright tests
         run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
